# lithe.rs

./: Cargo.toml
cli/: Cargo.toml
cli/src/: init.rs  main.rs
cli/templates/go/: main.go
cli/templates/none/: README.md
cli/templates/python/: main.py
cli/templates/rust/: main.rs
cli/templates/typescript/: index.ts
crates/lithe/: Cargo.toml
crates/lithe-cli/: Cargo.toml
crates/lithe-cli/src/: build.rs  dev.rs  generate.rs  init.rs  main.rs  server.rs  wasm.rs
crates/lithe-cli/templates/rust/: Cargo.toml
crates/lithe-cli/templates/rust/pages/: index.rs
crates/lithe-cli/templates/rust/src/: lib.rs  utils.rs
crates/lithe-cli/templates/rust/src/pages/: about.rs  index.rs
crates/lithe-core/: Cargo.toml
crates/lithe-core/src/: element.rs  lib.rs  rpc.rs
crates/lithe-macros/: Cargo.toml
crates/lithe-macros/src/: lib.rs
crates/lithe/src/: browser.rs  client.rs  lib.rs
docs/: 01_Manifesto.md  02_Architecture.md  03_Navigation_and_Rendering.md  04_UI_Patterns_and_Animations.md  05_State_and_Telepathy.md  06_Forms_and_Actions.md  07_Compile_Time_Magic.md  08_Styling.md  09_Ecosystem_and_Distribution.md  10_CLI_Reference.md  Cli.md  Framework.md  Main.md  Roadmap.md  TripleScope.md  VsCode.md  Wasm.md
examples/project/: Cargo.toml  build.rs
examples/project/.lithe/: lib.rs  main.rs  routes.rs  rpc.rs  static_builder.rs  wasm_exports.rs
examples/project/src/: lib.rs  main.rs  utils.rs
examples/project/src/pages/: contact.rs  index.rs  mod.rs
examples/static-starter/: index.html
examples/static-starter/src/: main.rs
