[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
confy = "2.0.0"
dialoguer = "0.12.0"
env_logger = "0.11.8"
indicatif = "0.18.3"
log = "0.4.29"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
