[package]
name = "lithe"
version = "0.1.0"
edition = "2024"

[dependencies]
lithe-core = { path = "../lithe-core" }
lithe-macros = { path = "../lithe-macros" }
lithe-ui = { path = "../lithe-ui" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "Location", "console"] }
wasm-bindgen = "0.2"
