[package]
name = "lithe"
version = "0.1.0"
edition = "2024"

[dependencies]
lithe-core = { path = "../lithe-core" }
lithe-macros = { path = "../lithe-macros" }
lithe-ui = { path = "../lithe-ui" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "Location", "console", "Request", "RequestInit", "RequestMode", "Response", "Headers"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
