[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
path = ".lithe/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
lithe = { path = "../../crates/lithe" }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window"] }

[[bin]]
name = "lithe-app"
path = ".lithe/main.rs"

[[bin]]
name = "lithe-static-builder"
path = ".lithe/static_builder.rs"
